--- a/assets/css/stylesv15.scss
+++ b/assets/css/stylesv15.scss
@@ -274,13 +274,9 @@ h5 {
     display: inline;
 }
 
-// svg {
-//     height: 50vh;
-// }
-
-// .art:hover {
-//     filter: grayscale(100%);
-// }
+.navbar a:hover {
+    opacity: 0.5;
+}
 
 // CONTACT PAGE
 #contact {
