Started webdevteam.html

--- a/assets/css/webteam.scss
+++ b/assets/css/webteam.scss
@@ -14,11 +14,19 @@ body {
     color: white;
 }
 
+.col-sm-5th {
+    position: relative;
+    min-height: 1px;
+    padding-left: 15px;
+    padding-right: 15px;
+}
+
 p {
     font-size: 11px;
     margin-bottom: 0;
     color: white;
     font-style: italic;
+    text-align: center;
 }
 
 .header {
@@ -36,6 +44,8 @@ h1 {
     font-size: 40px;
     font-weight: bold;
     font-style: normal;
+    text-align: center;
+    color: white;
 }
 
 footer {
@@ -77,9 +87,14 @@ h2 {
     opacity: 0;
 }
 
-.team > .container, .exec> .container{
+.web > .container{
     text-align: center;
     margin-bottom: 1vh;
+}
+
+.web {
+    overflow: auto;
+    padding-bottom: 5vh;
 }
 
 .name {
@@ -87,12 +102,14 @@ h2 {
     font-style: normal;
 }
 
-div.col-4.col-sm-3, div.col-6.col-sm-3, div.col-4.col-sm-4, div.col-6.col-sm-3, div.col-6.col-sm-4 {
+div.col-4.col-sm-3, div.col-6.col-sm-3, div.col-4.col-sm-4, div.col-6.col-sm-3, div.col-6.col-sm-4, div.col-6.col-sm-1, div.col-6.col-sm-2 {
       padding: 5vh 0 0 0;
 }
 
 .header > p {
       font-size: medium;
+      text-align: center;
+      color: white;
 }
   
 .member {
@@ -145,6 +162,10 @@ a {
     width: 100%;
     position: relative;
 }
+.col-sm-5th {
+    width: 20%;
+    float:left;
+}
 
 @media (min-width: 576px) {
     body {
@@ -154,13 +175,18 @@ a {
         -o-background-size: cover;
         background-size: cover;
     }
+
+    .col-sm-5th {
+        width: 20%;
+        float:left;
+    }
     .header {
         margin-bottom: 5vh;
     }
     h2 {
         margin-bottom: 5vh;
     }
-    .team > .container, .exec> .container{
+    .team > .container, .web> .container{
         margin-bottom: 5vh;
     }
     a.about {
