--- a/assets/css/about.css
+++ b/assets/css/about.css
@@ -18,14 +18,6 @@ h2 {
   margin-top: 50px;
   padding-bottom: 10px;
   font-weight: bold;
-  font-style: italic;
-  padding-bottom: 0.4rem;
-  font-size: 35px;
-}
-
-h2 {
-  text-align: left;
-  font-size: 25px;
 }
 
 h4 {
@@ -33,10 +25,6 @@ h4 {
   padding-left: 50px;
   padding-bottom: 5px;
   font-weight: 600;
-  font-style: italic;
-  padding-bottom: 2rem;
-  font-size: 18px;
-
 }
 
 h6 {
@@ -54,484 +42,207 @@ h6 {
 }
 
 .column1 {
-  visibility: hidden;
-  display: none;
+  text-align: justify;
+  text-justify: inter-word;
 }
 
 .column2 {
-  visibility: hidden;
-  display: none;
+  text-align: justify;
+  text-justify: inter-word;
 }
 
-.row:after {
-  visibility: none;
-  clear: both;
+p {
+  padding-left: 50px;
+  padding-right: 50px;
 }
 
-#mobile {
-  visibility: visible;
-}
-
-#mobile2 {
-  visibility: visible;
+#aboutpic1 {
   display: block;
+  height: 30vh;
+  margin-left: 55px;
+  margin-right: 55px;
 }
 
-#pillarsmobile1,
-#pillarsmobile3 {
-  visibility: visible;
-  display: inline;
-  width: 390px;
-}
-
-#aboutpic1,
 #aboutpic2 {
-  visibility: hidden;
-  display: none;
+  display: block;
+  height: 30vh;
+  margin-left: 55px;
+  margin-right: 55px;
 }
 
 #aboutpic3 {
-  visibility: hidden;
-  display: none;
-}
-
-#aboutpic3mobile {
-  visibility: visible;
   display: block;
-  width: 23rem;
+  height: 30vh;
+  margin-left: 55px;
+  margin-right: 55px;
 }
 
 figcaption {
-  visibility: hidden;
-  display: none;
+  padding: 2px;
+  text-align: center;
+  font-style: italic;
+  font-weight: 1;
+  color: gray;
+  font-size: 8px;
 }
 
-
-#pillars1 {
-  visibility: hidden;
-  display: none;
+.navbar-light .navbar-nav .nav-link {
+  padding-left: 0;
+  margin-left: 0.5em;
+  padding-right: 0;
+  margin-right: 0.5em;
+  padding-bottom: 0.1em;
+  margin-bottom: 0.4em;
 }
 
-#pillars3 {
-  visibility: hidden;
-  display: none;
+.navbar-light .navbar-nav .nav-link:hover {
+  color: #787878;
+  border-color: #787878;
 }
 
-#end {
-  text-align: justify;
+a.about {
+  border-bottom: solid #99CC99;
 }
 
-#frontmobile {
-  visibility: visible;
-  display: block;
-  text-align: justify;
+a.members {
+  border-bottom: solid #99CCFF;
 }
 
-#originmobile {
-  visibility: visible;
-  display: block;
-  text-align: justify;
-}
-
-#mission,
-#front {
-  visibility: hidden;
-  display: none;
-}
-
-#container {
-  visibility: visible;
-  text-align: justify;
-}
-
-
-#originmobiletitle,
-#missionmobile,
-#inventmobile {
-  visibility: visible;
-  display: block;
+a.projects {
+  border-bottom: solid #E06B65;
 }
 
 @media (min-width: 576px) {
-
-  #container {
-    visibility: none;
-  }
-
-  .column1 {
-    display: none;
-  }
-
-  .column2 {
-    display: none;
-  }
-
-  .row:after {
-    display: none;
-    ;
-    clear: both;
-  }
-
-  #mobile {
-    visibility: visible;
-    display: block;
-  }
-
-  #mobile2 {
-    visibility: visible;
-  }
-
-  #aboutpic1,
-  #aboutpic2 {
-    visibility: hidden;
-    display: none;
-  }
-
-  #aboutpic3 {
-    visibility: hidden;
-    display: none;
-
-  }
-
-  figcaption {
-    visibility: hidden;
-    display: none;
-  }
-
-  #pillarsmobile1,
-  #pillarsmobile3 {
-    visibility: visible;
-    display: block;
-  }
-
-
-  #pillars1 {
-    visibility: hidden;
-    display: none;
-
-  }
-
-  #pillars3 {
-    visibility: hidden;
-    display: none;
-  }
-
-  #aboutpic3mobile {
-    visibility: visible;
-    display: block;
-    width: 30rem;
-  }
-
-  #originmobile {
-    visibility: visible;
-    display: block;
-    text-align: justify;
-  }
-
-  #front {
-    visibility: hidden;
-    display: none;
-  }
-
-  #frontmobile {
-    visibility: visible;
-    display: block;
-  }
-
-  #originmobiletitle,
-  #missionmobile,
-  #inventmobile {
-    visibility: visible;
-    display: block;
-  }
-
-  #mission,
-  #front {
-    visibility: hidden;
-    display: none;
-  }
-
-
-}
-
-@media (min-width: 768px) {
-  h1 {
-    text-align: center;
-    font-weight: bold;
-    font-style: italic;
-    padding-bottom: 0.4rem;
-    font-size: 50px;
-  }
-
   h2 {
-    text-align: left;
-    font-size: 35px;
+    text-align: center;
+    margin-top: 50px;
+    padding-bottom: 10px;
+    font-weight: bold;
   }
-
   h4 {
+    padding-top: 20px;
+    padding-left: 60px;
+    padding-bottom: 15px;
     font-weight: 600;
-    font-style: italic;
-    padding-bottom: 2rem;
-    font-size: 25px;
-
   }
-
-  #container {
-    visibility: visible;
+  h6 {
+    text-align: center;
   }
-
+  #values {
+    text-align: right;
+    padding-right: 60px;
+  }
   .column1 {
-    display: visible;
-  }
-
-  .column2 {
-    display: visible;
-  }
-
-  .row:after {
-    display: visible;
-    ;
-    clear: both;
-  }
-
-  #mobile {
-    visibility: none;
-  }
-
-  #aboutpic1,
-  #aboutpic2 {
-    visibility: visible;
-    display: block;
-  }
-
-  #aboutpic3 {
-    visibility: visible;
-    display: block;
-  }
-
-  #aboutpic3mobile {
-    visibility: hidden;
-    display: none;
-  }
-
-  #mobile2 {
-    visibility: visible;
-  }
-
-  #pillars1 {
-    visibility: visible;
-
-  }
-
-  #pillars3 {
-    visibility: visible;
-  }
-
-  #pillarsmobile1,
-  #pillarsmobile3 {
-    visibility: hidden;
-    display: none;
-  }
-
-  figcaption {
-    font-style: italic;
-    font-weight: 10px;
-    color: black;
-    max-width: 27em;
-    margin: auto;
-    visibility: visible;
-    display: block;
-  }
-
-  #originmobile {
-    visibility: hidden;
-    display: none;
-  }
-
-  #front,
-  #mission {
-    visibility: visible;
-    display: block;
-  }
-
-  #frontmobile {
-    visibility: hidden;
-    display: none;
-  }
-
-  #originmobiletitle,
-  #missionmobile,
-  #inventmobile {
-    visibility: hidden;
-    display: none;
-  }
-
-}
-
-@media (min-width: 992px) {
-  #container {
-    visibility: visible;
-    display: inline;
-    visibility: visible;
-  }
-
-  #mobile {
-    visibility: hidden;
-    display: none;
-  }
-
-  #mobile2 {
-    visibility: hidden;
-    block: none;
-  }
-
-  .column1 {
-    float: left;
-    width: 50%;
     text-align: justify;
     text-justify: inter-word;
-    display: inline;
-    visibility: visible;
   }
-
   .column2 {
-    float: right;
-    width: 50%;
     text-align: justify;
     text-justify: inter-word;
-    display: inline;
-    visibility: visible;
-
   }
-
   .row:after {
     display: table;
     clear: both;
-
   }
-
-  #aboutpic1 {
-    width: 30rem;
-    margin-left: auto;
-    margin-right: auto;
-    visibility: visible;
-  }
-
-
-  #aboutpic2 {
-    width: 30rem;
-    margin-left: auto;
-    margin-right: auto;
-    visibility: visible;
-  }
-
-  #aboutpic3 {
-    height: 23rem;
-    width: 32rem;
-    margin-left: auto;
-    margin-right: auto;
-    visibility: visible;
-
-  }
-
-  #aboutpic3mobile {
-    visibility: hidden;
-    display: none;
-  }
-
-  #pillars3 {
-    width: 36rem;
-    display: inline;
-    margin-left: auto;
-    margin-right: auto;
-    visibility: visible;
-  }
-
-  #pillars1 {
-    width: 36rem;
-    padding-top: 1em;
-    display: inline;
-    margin-left: auto;
-    margin-right: auto;
-    visibility: visible;
-  }
-
-  #pillarsmobile1,
-  #pillarsmobile3 {
-    visibility: hidden;
-    display: none;
-    margin-left: auto;
-    margin-right: auto;
-  }
-
-  figcaption {
-    font-style: italic;
-    font-weight: 10px;
-    color: black;
-    max-width: 27em;
-    margin: auto;
-    visibility: visible;
-    display: block;
-  }
-
-  #end {
-    display: block;
-    visibility: visible;
-  }
-
-
-  #origin {
-    padding-top: 75px;
+  p {
     padding-left: 60px;
-    width: 500px;
+    padding-right: 60px;
   }
-
-  #originmobile {
-    visibility: hidden;
-    display: none;
-  }
-
-  #front,
-  #mission {
-    visibility: visible;
+  #aboutpic1 {
     display: block;
+    margin-left: auto;
+    margin-right: auto;
+    height: 30vh;
   }
-
-  #frontmobile {
-    visibility: hidden;
-    display: none;
+  #aboutpic2 {
+    display: block;
+    margin-left: auto;
+    margin-right: auto;
+    height: 30vh;
   }
-
-  #originmobiletitle,
-  #missionmobile,
-  #inventmobile {
-    visibility: hidden;
-    display: none;
+  #aboutpic3 {
+    display: block;
+    margin-left: auto;
+    margin-right: auto;
+    height: 30vh;
   }
-
-
-  h1 {
+  figcaption {
+    padding: 2px;
     text-align: center;
-    font-weight: bold;
     font-style: italic;
-    padding-bottom: 0.4rem;
-    font-size: 50px;
+    font-weight: 1;
+    color: gray;
   }
+}
 
+@media (min-width: 768px) {
   h2 {
-    text-align: left;
-    font-size: 35px;
+    text-align: center;
+    margin-top: 50px;
+    padding-bottom: 5px;
+    font-weight: bold;
   }
-
   h4 {
+    padding-top: 20px;
+    padding-left: 60px;
+    padding-bottom: 5px;
     font-weight: 600;
-    font-style: italic;
-    padding-bottom: 2rem;
-    font-size: 25px;
-
   }
-
-
+  h6 {
+    text-align: center;
+  }
+  #values {
+    text-align: right;
+    padding-right: 60px;
+  }
+  .column1 {
+    text-align: justify;
+    text-justify: inter-word;
+  }
+  .column2 {
+    text-align: justify;
+    text-justify: inter-word;
+  }
+  .row:after {
+    display: table;
+    clear: both;
+  }
+  p {
+    padding-left: 40px;
+    padding-right: 40px;
+  }
+  #aboutpic1 {
+    display: block;
+    margin-left: auto;
+    margin-right: auto;
+    height: 50vh;
+    margin-left: 150px;
+    margin-right: 150px;
+  }
+  #aboutpic2 {
+    display: block;
+    margin-left: auto;
+    margin-right: auto;
+    height: 50vh;
+    margin-left: 150px;
+    margin-right: 150px;
+  }
+  #aboutpic3 {
+    display: block;
+    margin-left: auto;
+    margin-right: auto;
+    height: 50vh;
+    margin-left: 150px;
+    margin-right: 150px;
+  }
+  figcaption {
+    padding: 2px;
+    text-align: center;
+    font-style: italic;
+    font-weight: 1;
+    color: gray;
+    font-size: 12px;
+  }
 }
 
 @media (min-width: 992px) {
