--- a/assets/css/webteam.css
+++ b/assets/css/webteam.css
@@ -9,11 +9,19 @@ body {
   color: white;
 }
 
+.col-sm-5th {
+  position: relative;
+  min-height: 1px;
+  padding-left: 15px;
+  padding-right: 15px;
+}
+
 p {
   font-size: 11px;
   margin-bottom: 0;
   color: white;
   font-style: italic;
+  text-align: center;
 }
 
 .header {
@@ -31,6 +39,8 @@ h1 {
   font-size: 40px;
   font-weight: bold;
   font-style: normal;
+  text-align: center;
+  color: white;
 }
 
 footer {
@@ -74,9 +84,14 @@ h2 {
   opacity: 0;
 }
 
-.team > .container, .exec > .container {
+.web > .container {
   text-align: center;
   margin-bottom: 1vh;
+}
+
+.web {
+  overflow: auto;
+  padding-bottom: 5vh;
 }
 
 .name {
@@ -84,12 +99,14 @@ h2 {
   font-style: normal;
 }
 
-div.col-4.col-sm-3, div.col-6.col-sm-3, div.col-4.col-sm-4, div.col-6.col-sm-3, div.col-6.col-sm-4 {
+div.col-4.col-sm-3, div.col-6.col-sm-3, div.col-4.col-sm-4, div.col-6.col-sm-3, div.col-6.col-sm-4, div.col-6.col-sm-1, div.col-6.col-sm-2 {
   padding: 5vh 0 0 0;
 }
 
 .header > p {
   font-size: medium;
+  text-align: center;
+  color: white;
 }
 
 .member {
@@ -144,10 +161,19 @@ a {
   position: relative;
 }
 
+.col-sm-5th {
+  width: 20%;
+  float: left;
+}
+
 @media (min-width: 576px) {
   body {
     background-image: url("../img/members/members1.png");
     background-size: cover;
+  }
+  .col-sm-5th {
+    width: 20%;
+    float: left;
   }
   .header {
     margin-bottom: 5vh;
@@ -155,7 +181,7 @@ a {
   h2 {
     margin-bottom: 5vh;
   }
-  .team > .container, .exec > .container {
+  .team > .container, .web > .container {
     margin-bottom: 5vh;
   }
   a.about {
@@ -205,4 +231,4 @@ a {
     padding-top: 2vh;
   }
 }
-/*# sourceMappingURL=membersv15.css.map */
+/*# sourceMappingURL=webteam.css.map */
