--- a/assets/css/about.css
+++ b/assets/css/about.css
@@ -11,307 +11,445 @@ html {
 
 body {
   font-family: 'Montserrat', sans-serif;
+  background-image: url(../img/about/gradient+clouds.png);
+  background-size: cover;
+}
+
+.navbar.scrolled {
+  background-color: #ffffff !important;
+  -webkit-transition: background-color 200ms linear;
+  transition: background-color 200ms linear;
+  color: white;
+}
+
+h1 {
+  text-align: center;
+  font-weight: bold;
+  font-style: italic;
+  padding-bottom: 0.4rem;
+  font-size: 35px;
 }
 
 h2 {
-  text-align: center;
-  margin-top: 50px;
-  padding-bottom: 10px;
-  font-weight: bold;
+  text-align: left;
+  font-size: 25px;
 }
 
 h4 {
-  padding-top: 20px;
-  padding-left: 50px;
-  padding-bottom: 5px;
   font-weight: 600;
+  font-style: italic;
+  padding-bottom: 2rem;
+  font-size: 18px;
 }
 
 h6 {
   text-align: center;
-}
-
-#values {
-  text-align: right;
-  padding-right: 50px;
-}
-
-.row:after {
-  display: table;
-  clear: both;
+  max-width: 25em;
+  margin: auto;
+  padding-bottom: 5em;
+  color: black;
+  font-weight: 100;
+  font-style: italic;
 }
 
 .column1 {
-  text-align: justify;
-  text-justify: inter-word;
+  visibility: hidden;
+  display: none;
 }
 
 .column2 {
-  text-align: justify;
-  text-justify: inter-word;
+  visibility: hidden;
+  display: none;
 }
 
-p {
-  padding-left: 50px;
-  padding-right: 50px;
+.row:after {
+  visibility: none;
+  clear: both;
 }
 
-#aboutpic1 {
+#mobile {
+  visibility: visible;
+}
+
+#mobile2 {
+  visibility: visible;
   display: block;
-  height: 30vh;
-  margin-left: 55px;
-  margin-right: 55px;
 }
 
+#pillarsmobile1,
+#pillarsmobile3 {
+  visibility: visible;
+  display: inline;
+  width: 390px;
+}
+
+#aboutpic1,
 #aboutpic2 {
-  display: block;
-  height: 30vh;
-  margin-left: 55px;
-  margin-right: 55px;
+  visibility: hidden;
+  display: none;
 }
 
 #aboutpic3 {
+  visibility: hidden;
+  display: none;
+}
+
+#aboutpic3mobile {
+  visibility: visible;
   display: block;
-  height: 30vh;
-  margin-left: 55px;
-  margin-right: 55px;
+  width: 23rem;
 }
 
 figcaption {
-  padding: 2px;
-  text-align: center;
-  font-style: italic;
-  font-weight: 1;
-  color: gray;
-  font-size: 8px;
+  visibility: hidden;
+  display: none;
 }
 
-.navbar-light .navbar-nav .nav-link {
-  padding-left: 0;
-  margin-left: 0.5em;
-  padding-right: 0;
-  margin-right: 0.5em;
-  padding-bottom: 0.1em;
-  margin-bottom: 0.4em;
+#pillars1 {
+  visibility: hidden;
+  display: none;
 }
 
-.navbar-light .navbar-nav .nav-link:hover {
-  color: #787878;
-  border-color: #787878;
+#pillars3 {
+  visibility: hidden;
+  display: none;
 }
 
-a.about {
-  border-bottom: solid #99CC99;
+#end {
+  text-align: justify;
 }
 
-a.members {
-  border-bottom: solid #99CCFF;
+#frontmobile {
+  visibility: visible;
+  display: block;
+  text-align: justify;
 }
 
-a.projects {
-  border-bottom: solid #E06B65;
+#originmobile {
+  visibility: visible;
+  display: block;
+  text-align: justify;
+}
+
+#mission,
+#front {
+  visibility: hidden;
+  display: none;
+}
+
+#container {
+  visibility: visible;
+  text-align: justify;
+}
+
+#originmobiletitle,
+#missionmobile,
+#inventmobile {
+  visibility: visible;
+  display: block;
 }
 
 @media (min-width: 576px) {
-  h2 {
-    text-align: center;
-    margin-top: 50px;
-    padding-bottom: 10px;
-    font-weight: bold;
-  }
-  h4 {
-    padding-top: 20px;
-    padding-left: 60px;
-    padding-bottom: 15px;
-    font-weight: 600;
-  }
-  h6 {
-    text-align: center;
-  }
-  #values {
-    text-align: right;
-    padding-right: 60px;
+  #container {
+    visibility: none;
   }
   .column1 {
-    text-align: justify;
-    text-justify: inter-word;
+    display: none;
   }
   .column2 {
-    text-align: justify;
-    text-justify: inter-word;
+    display: none;
   }
   .row:after {
-    display: table;
+    display: none;
     clear: both;
   }
-  p {
-    padding-left: 60px;
-    padding-right: 60px;
-  }
-  #aboutpic1 {
+  #mobile {
+    visibility: visible;
     display: block;
-    margin-left: auto;
-    margin-right: auto;
-    height: 30vh;
   }
+  #mobile2 {
+    visibility: visible;
+  }
+  #aboutpic1,
   #aboutpic2 {
-    display: block;
-    margin-left: auto;
-    margin-right: auto;
-    height: 30vh;
+    visibility: hidden;
+    display: none;
   }
   #aboutpic3 {
-    display: block;
-    margin-left: auto;
-    margin-right: auto;
-    height: 30vh;
+    visibility: hidden;
+    display: none;
   }
   figcaption {
-    padding: 2px;
-    text-align: center;
-    font-style: italic;
-    font-weight: 1;
-    color: gray;
+    visibility: hidden;
+    display: none;
+  }
+  #pillarsmobile1,
+  #pillarsmobile3 {
+    visibility: visible;
+    display: block;
+  }
+  #pillars1 {
+    visibility: hidden;
+    display: none;
+  }
+  #pillars3 {
+    visibility: hidden;
+    display: none;
+  }
+  #aboutpic3mobile {
+    visibility: visible;
+    display: block;
+    width: 30rem;
+  }
+  #originmobile {
+    visibility: visible;
+    display: block;
+    text-align: justify;
+  }
+  #front {
+    visibility: hidden;
+    display: none;
+  }
+  #frontmobile {
+    visibility: visible;
+    display: block;
+  }
+  #originmobiletitle,
+  #missionmobile,
+  #inventmobile {
+    visibility: visible;
+    display: block;
+  }
+  #mission,
+  #front {
+    visibility: hidden;
+    display: none;
   }
 }
 
 @media (min-width: 768px) {
-  h2 {
+  h1 {
     text-align: center;
-    margin-top: 50px;
-    padding-bottom: 5px;
     font-weight: bold;
+    font-style: italic;
+    padding-bottom: 0.4rem;
+    font-size: 50px;
+  }
+  h2 {
+    text-align: left;
+    font-size: 35px;
   }
   h4 {
-    padding-top: 20px;
-    padding-left: 60px;
-    padding-bottom: 5px;
     font-weight: 600;
+    font-style: italic;
+    padding-bottom: 2rem;
+    font-size: 25px;
   }
-  h6 {
-    text-align: center;
-  }
-  #values {
-    text-align: right;
-    padding-right: 60px;
+  #container {
+    visibility: visible;
   }
   .column1 {
-    text-align: justify;
-    text-justify: inter-word;
+    display: visible;
   }
   .column2 {
-    text-align: justify;
-    text-justify: inter-word;
+    display: visible;
   }
   .row:after {
-    display: table;
+    display: visible;
     clear: both;
   }
-  p {
-    padding-left: 40px;
-    padding-right: 40px;
+  #mobile {
+    visibility: none;
   }
-  #aboutpic1 {
-    display: block;
-    margin-left: auto;
-    margin-right: auto;
-    height: 50vh;
-    margin-left: 150px;
-    margin-right: 150px;
-  }
+  #aboutpic1,
   #aboutpic2 {
+    visibility: visible;
     display: block;
-    margin-left: auto;
-    margin-right: auto;
-    height: 50vh;
-    margin-left: 150px;
-    margin-right: 150px;
   }
   #aboutpic3 {
+    visibility: visible;
     display: block;
-    margin-left: auto;
-    margin-right: auto;
-    height: 50vh;
-    margin-left: 150px;
-    margin-right: 150px;
+  }
+  #aboutpic3mobile {
+    visibility: hidden;
+    display: none;
+  }
+  #mobile2 {
+    visibility: visible;
+  }
+  #pillars1 {
+    visibility: visible;
+  }
+  #pillars3 {
+    visibility: visible;
+  }
+  #pillarsmobile1,
+  #pillarsmobile3 {
+    visibility: hidden;
+    display: none;
   }
   figcaption {
-    padding: 2px;
-    text-align: center;
     font-style: italic;
-    font-weight: 1;
-    color: gray;
-    font-size: 12px;
+    font-weight: 10px;
+    color: black;
+    max-width: 27em;
+    margin: auto;
+    visibility: visible;
+    display: block;
+  }
+  #originmobile {
+    visibility: hidden;
+    display: none;
+  }
+  #front,
+  #mission {
+    visibility: visible;
+    display: block;
+  }
+  #frontmobile {
+    visibility: hidden;
+    display: none;
+  }
+  #originmobiletitle,
+  #missionmobile,
+  #inventmobile {
+    visibility: hidden;
+    display: none;
   }
 }
 
 @media (min-width: 992px) {
-  h2 {
-    text-align: center;
-    margin-top: 50px;
-    padding-bottom: 10px;
-    font-weight: bold;
+  #container {
+    visibility: visible;
+    display: inline;
+    visibility: visible;
   }
-  h4 {
-    padding-top: 20px;
-    padding-left: 60px;
-    padding-bottom: 15px;
-    font-weight: 600;
+  #mobile {
+    visibility: hidden;
+    display: none;
   }
-  h6 {
-    text-align: center;
-  }
-  #values {
-    text-align: right;
-    padding-right: 60px;
+  #mobile2 {
+    visibility: hidden;
+    block: none;
   }
   .column1 {
     float: left;
     width: 50%;
     text-align: justify;
     text-justify: inter-word;
+    display: inline;
+    visibility: visible;
   }
   .column2 {
-    float: left;
+    float: right;
     width: 50%;
     text-align: justify;
     text-justify: inter-word;
+    display: inline;
+    visibility: visible;
   }
   .row:after {
     display: table;
     clear: both;
   }
-  p {
-    padding-left: 60px;
-    padding-right: 60px;
-  }
   #aboutpic1 {
-    display: block;
-    margin-top: 25px;
+    width: 30rem;
     margin-left: auto;
     margin-right: auto;
-    height: 60vh;
+    visibility: visible;
   }
   #aboutpic2 {
-    margin-top: 10px;
-    display: block;
+    width: 30rem;
     margin-left: auto;
     margin-right: auto;
-    height: 60vh;
+    visibility: visible;
   }
   #aboutpic3 {
-    display: block;
+    height: 23rem;
+    width: 32rem;
     margin-left: auto;
     margin-right: auto;
-    height: 60vh;
+    visibility: visible;
+  }
+  #aboutpic3mobile {
+    visibility: hidden;
+    display: none;
+  }
+  #pillars3 {
+    width: 36rem;
+    display: inline;
+    margin-left: auto;
+    margin-right: auto;
+    visibility: visible;
+  }
+  #pillars1 {
+    width: 36rem;
+    padding-top: 1em;
+    display: inline;
+    margin-left: auto;
+    margin-right: auto;
+    visibility: visible;
+  }
+  #pillarsmobile1,
+  #pillarsmobile3 {
+    visibility: hidden;
+    display: none;
+    margin-left: auto;
+    margin-right: auto;
   }
   figcaption {
-    padding: 2px;
-    text-align: center;
     font-style: italic;
-    font-weight: 1;
-    color: gray;
-    font-size: 15px;
+    font-weight: 10px;
+    color: black;
+    max-width: 27em;
+    margin: auto;
+    visibility: visible;
+    display: block;
+  }
+  #end {
+    display: block;
+    visibility: visible;
+  }
+  #origin {
+    padding-top: 75px;
+    padding-left: 60px;
+    width: 500px;
+  }
+  #originmobile {
+    visibility: hidden;
+    display: none;
+  }
+  #front,
+  #mission {
+    visibility: visible;
+    display: block;
+  }
+  #frontmobile {
+    visibility: hidden;
+    display: none;
+  }
+  #originmobiletitle,
+  #missionmobile,
+  #inventmobile {
+    visibility: hidden;
+    display: none;
+  }
+  h1 {
+    text-align: center;
+    font-weight: bold;
+    font-style: italic;
+    padding-bottom: 0.4rem;
+    font-size: 50px;
+  }
+  h2 {
+    text-align: left;
+    font-size: 35px;
+  }
+  h4 {
+    font-weight: 600;
+    font-style: italic;
+    padding-bottom: 2rem;
+    font-size: 25px;
   }
 }
 /*# sourceMappingURL=about.css.map */
