--- a/assets/css/stylesv15.scss
+++ b/assets/css/stylesv15.scss
@@ -385,6 +385,31 @@ footer {
 
 // Small devices (landscape phones, 576px and up)
 @media (min-width: 576px) {
+    a.about {
+        border-bottom: solid $green;
+    }
+    
+    a.members {
+        border-bottom: solid $blue;
+    }
+    
+    a.projects {
+        border-bottom: solid $red;
+    }
+
+    .navbar-light .navbar-nav .nav-link {
+        padding-left: 0;
+        margin-left: 0.5em;
+        padding-right: 0;
+        margin-right: 0.5em;
+        padding-bottom: 0.1em;
+        margin-bottom: 0.4em;
+    }
+    .navbar-light .navbar-nav .nav-link:hover {
+        color: $gray;
+        border-color: $gray;
+    }
+
     #landing, #contact, #projects{
         max-height: 50vw;
         height: 90vh;
