--- a/assets/css/stylesv15.scss
+++ b/assets/css/stylesv15.scss
@@ -26,6 +26,8 @@ html {
 
 body {
     font-family: 'Montserrat', sans-serif;
+    background: linear-gradient($grad-1, $grad-2, $grad-3, $grad-4, $grad-5) no-repeat;
+    height: 100%;
 }
 
 footer {
@@ -172,12 +174,8 @@ nav {
 }
 
 h5 {
-    background: linear-gradient(180deg, rgba(255,255,255,0) 65%, #FFD0AE 65%);
-    display: inline;
-}
-
-.half-background {
-    background: linear-gradient(to top, yellow 50%, transparent 50%);
+    // background: linear-gradient(180deg, rgba(255,255,255,0) 65%, #FFD0AE 65%);
+    // display: inline;
 }
 
 // CONTACT PAGE
