--- a/assets/css/membersv15.css
+++ b/assets/css/membersv15.css
@@ -135,8 +135,8 @@ a {
 
 @media (min-width: 576px) {
   body {
-    background-image: url("../img/members/members1.png");
-    background-size: cover;
+    background: -webkit-gradient(linear, left top, left bottom, from(#F8E8B2), color-stop(#F4CCBE), color-stop(#E58F7C), color-stop(#6376A8), to(#202020)) no-repeat;
+    background: linear-gradient(#F8E8B2, #F4CCBE, #E58F7C, #6376A8, #202020) no-repeat;
   }
   .header {
     margin-bottom: 5vh;
