--- a/assets/css/membersv15.scss
+++ b/assets/css/membersv15.scss
@@ -5,6 +5,11 @@ $green:#99CC99;
 $blue: #99CCFF;
 $gray: #787878;
 $black: #202020;
+$grad-1: #F8E8B2;
+$grad-2: #F4CCBE;
+$grad-3: #E58F7C;
+$grad-4: #6376A8;
+$grad-5: #202020;
 body {
     background-color: $gray;
 }
@@ -137,11 +142,12 @@ a {
 
 @media (min-width: 576px) {
     body {
-        background-image: url("../img/members/members1.png");
-        -webkit-background-size: cover;
-        -moz-background-size: cover;
-        -o-background-size: cover;
-        background-size: cover;
+        // background-image: url("../img/members/members1.png");
+        // -webkit-background-size: cover;
+        // -moz-background-size: cover;
+        // -o-background-size: cover;
+        // background-size: cover;
+        background: linear-gradient($grad-1, $grad-2, $grad-3, $grad-4, $grad-5) no-repeat;
     }
     .header {
         margin-bottom: 5vh;
