--- a/assets/css/stylesv15.scss
+++ b/assets/css/stylesv15.scss
@@ -719,7 +719,8 @@ footer {
   .mark {
     background-color: green;
     color: black;
-    border-radius: 40%
+    border-radius: 40%;
+    padding-bottom: 5%;
   }
 
   .full-width {
