content in place for projects desktop

--- a/assets/css/stylesv15.css
+++ b/assets/css/stylesv15.css
@@ -547,4 +547,16 @@ u {
 .project-nav-blue:hover {
   background-color: #99CCFF;
 }
+
+#projects-subtitle {
+  text-align: center;
+  font-style: oblique;
+}
+
+#projects-header {
+  text-align: center;
+  font-weight: 10px;
+  font-size: 3vw;
+  padding-bottom: 0;
+}
 /*# sourceMappingURL=stylesv15.css.map */
