--- a/assets/css/stylesv15.scss
+++ b/assets/css/stylesv15.scss
@@ -595,3 +595,16 @@ h5 {
   .project-nav-blue:hover {
     background-color: #99CCFF;
   }
+
+  #projects-subtitle {
+      text-align: center;
+      font-style: oblique;
+
+  }
+
+  #projects-header {
+      text-align: center;
+      font-weight: 10px;
+      font-size: 3vw;
+      padding-bottom: 0;
+  }
