--- a/assets/css/membersv15.css
+++ b/assets/css/membersv15.css
@@ -16,6 +16,27 @@ body {
   height: auto;
 }
 
+.helmet {
+  width: 100%;
+  height: auto;
+  position: absolute;
+  bottom: 100px;
+}
+
+.helmet-img-1 {
+  width: 8vw;
+  height: 8vw;
+  -webkit-transform: translate(5vw, -5vw) rotate(140deg);
+          transform: translate(5vw, -5vw) rotate(140deg);
+}
+
+.helmet-img-2 {
+  width: 8vw;
+  height: 8vw;
+  -webkit-transform: translate(87vw, -55vh) rotate(20deg);
+          transform: translate(87vw, -55vh) rotate(20deg);
+}
+
 .navbar.scrolled {
   background-color: #202020 !important;
   -webkit-transition: background-color 200ms linear;
@@ -80,6 +101,7 @@ h2 {
 
 .quote {
   position: absolute;
+  width: 95%;
   top: 50%;
   left: 50%;
   -webkit-transform: translate(-50%, -50%);
@@ -157,9 +179,24 @@ a {
   .galaxy {
     bottom: 50px;
   }
+  .helmet-img-2 {
+    -webkit-transform: translate(87vw, -140vh) rotate(20deg);
+            transform: translate(87vw, -140vh) rotate(20deg);
+  }
+}
+
+@media (min-width: 768px) {
+  .helmet-img-2 {
+    -webkit-transform: translate(87vw, -100vh) rotate(20deg);
+            transform: translate(87vw, -100vh) rotate(20deg);
+  }
 }
 
 @media (min-width: 992px) {
+  .helmet-img-2 {
+    -webkit-transform: translate(87vw, -200vh) rotate(20deg);
+            transform: translate(87vw, -200vh) rotate(20deg);
+  }
   .header {
     margin-bottom: 5vh;
   }
@@ -207,6 +244,9 @@ a {
   }
   .quote {
     opacity: 1;
+  }
+  .quote:hover {
+    z-index: 1;
   }
   p {
     font-size: larger;
