Header styling across different pages

--- a/assets/css/membersv15.css
+++ b/assets/css/membersv15.css
@@ -44,9 +44,7 @@ body {
   color: white;
 }
 
-p {
-  font-size: 11px;
-  margin-bottom: 0;
+h6 {
   color: white;
   font-style: italic;
 }
@@ -124,10 +122,6 @@ h2 {
 
 div.col-4.col-sm-3, div.col-6.col-sm-3, div.col-4.col-sm-4, div.col-6.col-sm-3, div.col-6.col-sm-4 {
   padding: 5vh 0 0 0;
-}
-
-.header > p {
-  font-size: medium;
 }
 
 .member {
@@ -241,10 +235,6 @@ a {
   }
   p {
     font-size: larger;
-  }
-  .header > p {
-    font-size: x-large;
-    padding-top: 2vh;
   }
 }
 /*# sourceMappingURL=membersv15.css.map */
