--- a/assets/css/about.css
+++ b/assets/css/about.css
@@ -24,15 +24,15 @@ body {
 
 h1 {
   text-align: center;
+  font-size: 40px;
   font-weight: bold;
-  font-style: italic;
-  padding-bottom: 0.4rem;
-  font-size: 35px;
+  font-style: normal;
 }
 
 h2 {
   text-align: left;
   font-size: 25px;
+  font-style: normal;
 }
 
 h4 {
@@ -231,7 +231,6 @@ figcaption {
   h1 {
     text-align: center;
     font-weight: bold;
-    font-style: italic;
     padding-bottom: 0.4rem;
     font-size: 50px;
   }
@@ -437,7 +436,6 @@ figcaption {
   h1 {
     text-align: center;
     font-weight: bold;
-    font-style: italic;
     padding-bottom: 0.4rem;
     font-size: 50px;
   }
