--- a/assets/css/about.scss
+++ b/assets/css/about.scss
@@ -32,15 +32,15 @@ body {
 
 h1 {
   text-align: center;
+  font-size: 40px;
   font-weight: bold;
-  font-style: italic;
-  padding-bottom: 0.4rem;
-  font-size: 35px;
+  font-style: normal;
 }
 
 h2 {
   text-align: left;
   font-size: 25px;
+  font-style: normal;
 }
 
 h4 {
@@ -267,7 +267,6 @@ figcaption {
   h1 {
     text-align: center;
     font-weight: bold;
-    font-style: italic;
     padding-bottom: 0.4rem;
     font-size: 50px;
   }
@@ -275,6 +274,7 @@ figcaption {
   h2 {
     text-align: left;
     font-size: 35px;
+
   }
 
   h4 {
@@ -522,7 +522,6 @@ figcaption {
   h1 {
     text-align: center;
     font-weight: bold;
-    font-style: italic;
     padding-bottom: 0.4rem;
     font-size: 50px;
   }
